--- a/node/public/gakf/register.html
+++ b/node/public/gakf/register.html
@@ -14,7 +14,7 @@
 <body ms-controller="test">
 	<div class="container">
 		<div class="spacer50"></div>
-		<form id="regForm" method="post" >
+		<form id="regForm" method="post" onsubmit="return false;">
 			
 			<div class="form-group">
 				<input type="text" class="form-control my-input user" id="username" name="username" placeholder="请输入真实姓名" ms-duplex="d.username">
@@ -36,7 +36,7 @@
 			</div>
 
 			<div class="form-group text-center">
-				<button type="submit" ms-submit="save" class="btn btn-primary my-button">注册</button>
+				<button type="submit" class="btn btn-primary my-button">注册</button>
 			</div>
 			
 		</form>
@@ -44,10 +44,10 @@
 	<script type="text/javascript">
 		require(["validate.form","avalon"],function(reg){
 			var data = {
-		            "username":"",
-		            "password":"",
-		            "doctor_name":"",
-		            "bed_no":"",
+		            "username":"aa",
+		            "password":"111111",
+		            "doctor_name":"AA",
+		            "bed_no":"12",
 		            "wx_id":""
 				}
 				var vm = avalon.define({
@@ -71,7 +71,7 @@
 			    });
 			    avalon.scan();
 
-				reg.validate("regForm");
+				reg.validate("regForm",vm);
 
 		})
 	</script>
