--- a/node/public/gakf/register.html
+++ b/node/public/gakf/register.html
@@ -11,16 +11,16 @@
 	<script type="text/javascript" src="./static/js/main.js"></script>
 	<script type="text/javascript" src="./static/js/resource.js"></script>
 </head>
-<body ms-controller="test">
+<body >
 	<div class="container">
 		<div class="spacer50"></div>
-		<form id="regForm" method="post" onsubmit="return false;">
+		<form id="regForm" method="post" action="/user/reg">
 			
 			<div class="form-group">
-				<input type="text" class="form-control my-input user" id="username" name="username" placeholder="请输入真实姓名" ms-duplex="d.username">
+				<input type="text" class="form-control my-input user" id="username" name="username" placeholder="请输入真实姓名" />
 			</div>
 			<div class="form-group">
-				<input type="password" class="form-control my-input password" id="password" name="password" placeholder="密码" ms-duplex="d.password"/>
+				<input type="password" class="form-control my-input password" id="password" name="password" placeholder="密码" />
 			</div>
 			<div class="form-group">
 				<input type="password" class="form-control my-input repassword" id="repassword" name="login_repwd" placeholder="确认密码"/>
@@ -28,51 +28,22 @@
 
 			<div class="spacer30"></div>
 			<div class="form-group">
-				<input type="text" class="form-control my-input user" id="job"  name="doctor_name" placeholder="主治医生" ms-duplex="d.doctor_name">
+				<input type="text" class="form-control my-input user" id="job"  name="doctor" placeholder="主治医生" >
 			</div>
 			
 			<div class="form-group">
-				<input type="text" class="form-control my-input account" id="job" name="bed_no" placeholder="床号" ms-duplex="d.bed_no">
+				<input type="text" class="form-control my-input account" id="job" name="bed_no" placeholder="床号" >
 			</div>
 
 			<div class="form-group text-center">
 				<button type="submit" class="btn btn-primary my-button">注册</button>
 			</div>
-			
+			<input type="hidden" name="wx_id" value="11">
 		</form>
 	</div>
 	<script type="text/javascript">
-		require(["validate.form","avalon"],function(reg){
-			var data = {
-		            "username":"aa",
-		            "password":"111111",
-		            "doctor_name":"AA",
-		            "bed_no":"12",
-		            "wx_id":""
-				}
-				var vm = avalon.define({
-		          $id: "test",
-		          d:data,
-		          save:function(){
-		          	var d = JSON.stringify(vm.d.$model);
-		          	$.ajax({
-		          		type:"post",
-						url: "/user/reg",
-						dataType: "json", 
-						data:d,
-						success: function(d){
-							console.log(d);
-			    		},
-			    		error:function(){
-
-			    		}
-		          	})
-		          }
-			    });
-			    avalon.scan();
-
-				reg.validate("regForm",vm);
-
+		require(["validate.form"],function(reg){
+				reg.validate("regForm");
 		})
 	</script>
 </body>
