--- a/node/public/gakf/sick.html
+++ b/node/public/gakf/sick.html
@@ -45,68 +45,26 @@
 	</div>
 	<script type="text/javascript">
 	require(["avalon"],function(){
-			var data = [
-					{
-						id:"1",
-			            name:"陈思田",
-			            age:"18",
-			            gender:"男",
-			            operate_type:"创伤手术",
-			            care_level:"高危",
-			            bed_id:"27",
-			            in_day:"2015-6-13",
-			            out_day:"2015-6-15",
-			            day:3,
-			            doctor_name: "张小娟"
-					},
-					{
-						id:"2",
-			            name:"陈田",
-			            age:"18",
-			            gender:"男",
-			            operate_type:"创伤手术",
-			            care_level:"高危",
-			            bed_id:"02",
-			            in_day:"2015-6-13",
-			            out_day:"2015-6-15",
-			            day:3,
-			            doctor_name: "张小娟"
-					},{
-						id:"3",
-			            name:"陈田",
-			            age:"18",
-			            gender:"男",
-			            operate_type:"创伤手术",
-			            care_level:"高危",
-			            bed_id:"03",
-			            in_day:"2015-6-13",
-			            out_day:"2015-6-15",
-			            day:3,
-			            doctor_name: "张小娟"
-					},
-				];
+			var data = [];
+		   	var vmodel = avalon.define({
+		          $id: "test",
+		          d:data
+		    });
+		    avalon.scan();
+		   $.ajax({ 
+				type:"get",
+				url: "/doctor/sicks?doctor_id="+RC.parseOptions(window.location.href).doctor_id,
+				dataType: "json", 
+				success: function(obj){
+					vmodel.d = obj.content;
+	    		},
+	    		error:function(){
 
-				$.ajax({ 
-					type:"get",
-					url: "/doctor/sicks?doctor_id="+RC.parseOptions(window.location.href).doctor_id,
-					dataType: "json", 
-					success: function(obj){
-						data = obj.data;
-		    		},
-		    		error:function(){
-
-		    		}
-				}); 
-			    avalon.define({
-			          $id: "test",
-			          d:data
-			    });
-			    avalon.scan();
-			    $("#addSick").on("touchstart",function(){
-			    	$(this).attr("href","addSick.html?doctor_id="+RC.parseOptions(window.location.href).doctor_id);
-			    })
-				
-			
+	    		}
+			}); 
+		    $("#addSick").on("touchstart",function(){
+		    	$(this).attr("href","addSick.html?doctor_id="+RC.parseOptions(window.location.href).doctor_id);
+		    })
 	})
 	</script>
 </body>
