--- a/node/public/gakf/sick.html
+++ b/node/public/gakf/sick.html
@@ -13,7 +13,7 @@
 </head>
 <body ms-controller="test">
 	<div class="container">
-		<a ms-href="sickDetail.html?id={{el.id}}" style="display: block;" ms-repeat-el="d">
+		<a ms-href="addSick.html?id={{el.id}}" style="display: block;" ms-repeat-el="d">
 			<div class="panel panel-default my-panel" style="margin-top: 10px;">
 			  <div class="panel-heading " style="background: #fff;">
 			  	<div class="row">
