--- a/node/public/gakf/question.html
+++ b/node/public/gakf/question.html
@@ -28,14 +28,11 @@
 		</div>
 		<nav class="navbar navbar-default my-nav my-nav-top">
 			  <div id="my-tab">
-			    <div class="col-xs-4 text-center my-nav-line selected">
-			    	<a href="">过敏史</a>
+			    <div class="col-xs-6 text-center my-nav-line selected">
+			    	<a href="">基本信息</a>
 			    </div>
-			    <div class="col-xs-4 text-center my-nav-line">
-			    	<a href="">医疗记录</a>
-			    </div>
-			    <div class="col-xs-4 text-center my-nav-line">
-			    	<a href="">检查报告</a>
+			    <div class="col-xs-6 text-center my-nav-line">
+			    	<a href="">安全用药</a>
 			    </div>
 			  </div>
 		</nav>
