--- a/node/public/gakf/communicate.html
+++ b/node/public/gakf/communicate.html
@@ -41,7 +41,7 @@
 		  	</div>
 		  	<div class="my-line"></div>
 		  	<div>
-		  		<a href="">
+		  		<a href="question.html">
   			  		<span class="h5">阅读全文  </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
 		  		</a>
