--- a/node/public/gakf/communicate.html
+++ b/node/public/gakf/communicate.html
@@ -16,6 +16,17 @@
 		
 
 	</div>
+	<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom">
+	  <div class="container text-center" style="height: 42px; line-height: 42px;">
+	    <div class="row">
+	    	<div class="col-xs-12">
+	    		<a href="javascript:void(0)" id="askDoctor">
+			    	<span style="color:#fff;">询问医生</span>
+			    </a>
+	    	</div>
+	    </div>
+	  </div>
+	</nav>
 	<script type="text/html" id="test">
 	{{each d as v i}}
 		{{if i ==0}}
@@ -112,7 +123,9 @@
 
 	    		}
 			}); 
-		 	
+		 	$("#askDoctor").on("touchstart",function(){
+		    	$(this).attr("href","askDoctor.html?doctor_id="+RC.parseOptions(window.location.href).doctor_id);
+		    })
 		});
 
 	</script>
