--- a/node/public/gakf/communicate.html
+++ b/node/public/gakf/communicate.html
@@ -47,7 +47,7 @@
 			</div>
 		</div>
 		{{/if}}
-		{{if v.message}}
+		{{if v.message.pics}}
 			<div class="text-center">
 				<span class="titleBg">{{v.day}}</span>
 			</div>
