--- a/node/public/gakf/askDoctor.html
+++ b/node/public/gakf/askDoctor.html
@@ -33,7 +33,8 @@
 				</div>
 				<div class="content">
 					<div class="spacer15"></div>
-					主治医生：<span class="orange">{{d.doctor_name}}</span> <br/>
+					主治医生：<span class="orange">{{d.doctor_name}}</span> 
+					<div class="spacer5"></div>
 					{{d.title}}
 				</div>
 			</div>
