--- a/node/public/gakf/askDoctor.html
+++ b/node/public/gakf/askDoctor.html
@@ -43,7 +43,7 @@
 		<div class="row">
 			<form action="/answer/speak" method="post" id="askFrom">
 				<div class="col-xs-12">
-					<textarea class="my-textarea" placeholder="请输入求助内容" ms-duplex-string="d.content"></textarea>
+					<textarea class="my-textarea" name="content" placeholder="请输入求助内容" ms-duplex-string="d.content"></textarea>
 					<input type="hidden" name="sick_id" ms-duplex-string="d.sick_id"/>
 					<input type="hidden" name="doctor_id" ms-duplex-string="d.doctor_id"/>
 					<input type="hidden" name="pics" id="pics"/>
