--- a/node/public/gakf/login.html
+++ b/node/public/gakf/login.html
@@ -36,8 +36,8 @@
 				</div>
 			</div>
 			<input type="hidden" id="type" value="doctor"  name="type">
-			<div class="form-group text-right row">
-				<div class="col-xs-11">
+			<div class="form-group text-right">
+				<div class="text-center">
 					<button type="submit"  class="btn btn-primary my-button" >登录</button>
 				</div>
 			</div>
@@ -61,7 +61,7 @@
 			}
 		});
 
-		reg.validate("signForm",vm);
+		reg.validate("signForm");
 
 	});
 	</script>
