--- a/node/public/gakf/addCheck.html
+++ b/node/public/gakf/addCheck.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+add<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -17,6 +17,9 @@
 			<div class="col-xs-12">
 				<div class="spacer10"></div>
 				<textarea class="my-textarea"></textarea>
+				<input type="hidden" name="pics" id="pics"/>
+			</div>
+			<div class="col-xs-12">
 				<div id="demo" class="demo"></div>
 			</div>
 		</div>
